--- a/templates/report_template.j2
+++ b/templates/report_template.j2
@@ -8,7 +8,7 @@ Updates to be applied to bring device into compliance:
 {% endfor %}
 
 Users to be added or removed:
-{% for command in user_result.command%}}
+{% for command in user_result.commands %}}
 {{ command }}
 {% endfor %}}
 
