added ios_facts for code version

--- a/templates/report_template.j2
+++ b/templates/report_template.j2
@@ -1,6 +1,8 @@
 # templates/mail_body.j2
 {% for host in play_hosts %}
 {{ host }} report:
+Code version:
+{{ ios_facts}}
 
 Updates to be applied to bring device into compliance:
 {% for command in config_results.updates %}
