--- a/templates/report_template.j2
+++ b/templates/report_template.j2
@@ -2,6 +2,9 @@
 {% for host in play_hosts %}
 {{ host }} report:
 
+Code version: {{ ios_facts.ansible_facts.ansible_net_version }}
+Device Model: {{ ios_facts.ansible_facts.ansible_net_model }}
+
 Updates to be applied to bring device into compliance:
 {% for command in config_results.updates %}
 {{ command }}
