--- a/templates/3560cx_compliance_template.j2
+++ b/templates/3560cx_compliance_template.j2
@@ -4,7 +4,7 @@ service tcp-keepalives-out
 service timestamps debug datetime msec localtime show-timezone year
 service timestamps log datetime msec localtime show-timezone year
 service password-encryption
-no service call-home
+# no service call-home
 no service dhcp
 
 # enable secret 5 {{ enable_pass }}
