disable mtu routing command

--- a/templates/3560cx_compliance_template.j2
+++ b/templates/3560cx_compliance_template.j2
@@ -14,7 +14,7 @@ no service dhcp
 clock timezone EST -5 0
 clock summer-time EDT recurring
 
-system mtu routing 1500
+# system mtu routing 1500
 
 no ip domain lookup
 ip domain name {{ domain_name }}
