temp disable snmp commands

--- a/templates/3560cx_compliance_template.j2
+++ b/templates/3560cx_compliance_template.j2
@@ -120,12 +120,12 @@ logging host 10.41.0.240
 snmp-server community {{ snmp_ro }} RO PROTECT_SNMP
 snmp-server enable traps snmp authentication linkdown linkup coldstart warmstart
 # snmp-server enable traps transceiver all
-snmp-server enable traps entity
-snmp-server enable traps cpu threshold
-snmp-server enable traps tty
-snmp-server enable traps config
-snmp-server enable traps envmon fan shutdown supply temperature status
-snmp mib flash cache
+# snmp-server enable traps entity
+# snmp-server enable traps cpu threshold
+# snmp-server enable traps tty
+# snmp-server enable traps config
+# snmp-server enable traps envmon fan shutdown supply temperature status
+# snmp mib flash cache
 
 # ntp source {{ management_interface }}
 ntp server {{ ntp_address }}
