update var and access list

--- a/templates/3560cx_compliance_template.j2
+++ b/templates/3560cx_compliance_template.j2
@@ -54,8 +54,8 @@ ip ssh version 2
 ip scp server enable
 
 ip access-list extended PROTECT_SSH
-  10 permit tcp 10.0.0.0 0.255.255.255 any eq 22
-  100 deny ip any any log
+  permit tcp 10.0.0.0 0.255.255.255 any eq 22
+  deny ip any any log
 
 ip access-list standard PROTECT_SNMP
   {% for acl in protect_snmp_var %}}
