update check for domain commands on ios vs ios-xe

--- a/templates/3560cx_compliance_template.j2
+++ b/templates/3560cx_compliance_template.j2
@@ -16,8 +16,13 @@ clock summer-time EDT recurring
 
 # system mtu routing 1500
 
+{% if ansible_facts.ansible_net_model == 'WS-C3560CX-12PC-S' %}}
+no ip domain-lookup
+ip domain-name {{ domain_name }}
+{% else }}
 no ip domain lookup
 ip domain name {{ domain_name }}
+{% endif %}}
 
 # vtp off
 vtp mode off
