--- a/templates/report_template.j2
+++ b/templates/report_template.j2
@@ -1,11 +1,8 @@
 {% for host in play_hosts %}
 {{ host }} report:
-    Code version:
-        {{ ansible_net_version }}
-    Switch Model:
-        {{ ansible_net_model }}
-    Serial Number:
-        {{ ansible_net_serialnum }}
+    Code version: {{ ansible_net_version }}
+    Switch Model: {{ ansible_net_model }}
+    Serial Number: {{ ansible_net_serialnum }}
 
 Updates to be applied to bring device into compliance:
 {% for command in config_results.updates %}
