update template no loop

--- a/templates/report_template.j2
+++ b/templates/report_template.j2
@@ -1,4 +1,4 @@
-{% for host in play_hosts %}
+#{% for host in play_hosts %}
 {{ host }} report:
     Code version: {{ ansible_net_version }}
     Switch Model: {{ ansible_net_model }}
@@ -12,4 +12,4 @@ Updates to be applied to bring device into compliance:
 
 --------------------------------------------------------------------
 
-{% endfor %}
+#{% endfor %}
