--- a/templates/report_template.j2
+++ b/templates/report_template.j2
@@ -1,4 +1,4 @@
-{{ ansible_host }} report:
+{{ ansible_net_hostname }} report:
     Code version: {{ ansible_net_version }}
     Switch Model: {{ ansible_net_model }}
     Serial Number: {{ ansible_net_serialnum }}
