--- a/templates/3560cx_compliance_template.j2
+++ b/templates/3560cx_compliance_template.j2
@@ -14,11 +14,11 @@ no service dhcp
 clock timezone EST -5 0
 clock summer-time EDT recurring
 
-{% if ansible_net_model == 'WS-C3560CX-12PC-S' %}
+{% if ansible_net_model == 'WS-C3560CX-12PC-S' or ansible_net_model == 'WS-C3560CG-8PC-S' %}
 system mtu routing 1500
 {% endif %}
 
-{% if ansible_net_model == 'WS-C3560CX-12PC-S' %}
+{% if ansible_net_model == 'WS-C3560CX-12PC-S' or ansible_net_model == 'WS-C3560CG-8PC-S' %}
 no ip domain-lookup
 ip domain-name {{ domain_name }}
 {% elif ansible_net_model == 'IOSv' %}
@@ -131,13 +131,15 @@ logging host 10.41.0.240
 # snmp config
 snmp-server community {{ snmp_ro }} RO PROTECT_SNMP
 snmp-server enable traps snmp authentication linkdown linkup coldstart warmstart
-# snmp-server enable traps transceiver all
-# snmp-server enable traps entity
-# snmp-server enable traps cpu threshold
-# snmp-server enable traps tty
-# snmp-server enable traps config
-# snmp-server enable traps envmon fan shutdown supply temperature status
-# snmp mib flash cache
+{% if ansible_net_model == 'WS-C3560CX-12PC-S' or ansible_net_model == 'WS-C3560CG-8PC-S' %}
+snmp-server enable traps transceiver all
+snmp-server enable traps entity
+snmp-server enable traps cpu threshold
+snmp-server enable traps tty
+snmp-server enable traps config
+snmp-server enable traps envmon fan shutdown supply temperature status
+snmp mib flash cache
+{% endif %}
 
 # ntp source {{ management_interface }}
 ntp server {{ ntp_address }}
