try new tacacs vars

--- a/templates/3560cx_compliance_template.j2
+++ b/templates/3560cx_compliance_template.j2
@@ -159,10 +159,8 @@ snmp mib flash cache
 
 # TACACS config
 {% for server in tacacs_server_name %}
- tacacs server {{ server }}
-{% for ip in tacacs_server_ip %}
- address ipv4 {{ ip }}
-{% endfor %}
+ tacacs server {{ server.name }}
+ address ipv4 {{ server.ip }}
  key 7 {{ tacacs_key }}
  timeout 2
 {% endfor %}
