--- a/templates/3560cx_compliance_template.j2
+++ b/templates/3560cx_compliance_template.j2
@@ -1,4 +1,5 @@
 {% extends 'compliance_template.j2' %}
+{% block content %}
 # set services
 service tcp-keepalives-in
 service tcp-keepalives-out
@@ -188,3 +189,4 @@ line vty 5 15
  exec-timeout 15 0
  logging synchronous
  transport input ssh
+{% endblock %}
