--- a/templates/compliance_template.j2
+++ b/templates/compliance_template.j2
@@ -1,3 +1,3 @@
-{% if ansible_net_model == 'WS-C3560CX-12PC-S' or ansible_net_model == 'WS-C3560CG-8PC-S' %}
+{% if ansible_net_model == 'WS-C3560CX-12PC-S' or ansible_net_model == 'WS-C3560CG-8PC-S' or ansible_net_model == 'IOSv' %}
 {% include '3560cx_compliance_template.j2' %}
 {% endif %}
