--- a/templates/report_template.j2
+++ b/templates/report_template.j2
@@ -6,3 +6,6 @@
     {% for command in config_results.updates %}
         {{ command }}
     {% endfor %}
+    {% for command in domain_results.updates %}
+        {{ command }}
+    {% endfor %}
