update banner configuration to task not template

--- a/templates/3560cx_compliance_template.j2
+++ b/templates/3560cx_compliance_template.j2
@@ -166,9 +166,9 @@ tacacs server {{ server.name }}
  timeout 2
 {% endfor %}
 
-banner login ^
-{{ banner }}
-^
+# banner login ^
+# {{ banner }}
+# ^
 
 # ntp source {{ management_interface }}
 ntp server {{ ntp_address }}
