--- a/templates/report_template.j2
+++ b/templates/report_template.j2
@@ -9,3 +9,6 @@
     {% for command in domain_results.commands %}
         {{ command }}
     {% endfor %}
+    {% for command in banner_results.commands %}
+        {{ command }}
+    {% endfor %}
