--- a/templates/3560cx_compliance_template.j2
+++ b/templates/3560cx_compliance_template.j2
@@ -32,16 +32,16 @@ clock summer-time EDT recurring
 system mtu routing 1500
 {% endif %}
 
-# {% if ansible_net_model == 'WS-C3560CX-12PC-S' or ansible_net_model == 'WS-C3560CG-8PC-S' %}
-# no ip domain-lookup
-# ip domain-name {{ domain_name }}
-# {% elif ansible_net_model == 'IOSv' %}
-# no ip domain-lookup
-# ip domain-name {{ domain_name }}
-# {% else %}
-# no ip domain lookup
-# ip domain name {{ domain_name }}
-# {% endif %}
+## {% if ansible_net_model == 'WS-C3560CX-12PC-S' or ansible_net_model == 'WS-C3560CG-8PC-S' %}
+## no ip domain-lookup
+## ip domain-name {{ domain_name }}
+## {% elif ansible_net_model == 'IOSv' %}
+## no ip domain-lookup
+## ip domain-name {{ domain_name }}
+## {% else %}
+## no ip domain lookup
+## ip domain name {{ domain_name }}
+## {% endif %}
 
 # vtp off
 vtp mode off
@@ -71,7 +71,7 @@ errdisable recovery cause inline-power
 errdisable recovery interval 600
 
 no ip forward-protocol nd
-# ip tacacs source-interface {{ management_interface }}
+## ip tacacs source-interface {{ management_interface }}
 
 # service settings
 no ip http server
@@ -166,11 +166,11 @@ tacacs server {{ server.name }}
  timeout 2
 {% endfor %}
 
-# banner login ^
-# {{ banner }}
-# ^
+## banner login ^
+## {{ banner }}
+## ^
 
-# ntp source {{ management_interface }}
+## ntp source {{ management_interface }}
 ntp server {{ ntp_address }}
 
 line con 0
