move user config to task

--- a/templates/generic_compliance_template.j2
+++ b/templates/generic_compliance_template.j2
@@ -8,7 +8,7 @@ no service dhcp
 logging buffered 512000
 
 enable secret 5 {{ enable_pass }}
-username {{ local_user }} privilege 15 secret 5 {{ local_pass }}
+## username {{ local_user }} privilege 15 secret 5 {{ local_pass }}
 
 #set timezone
 clock timezone EST -5 0
