--- a/templates/report_template.j2
+++ b/templates/report_template.j2
@@ -12,6 +12,6 @@
     {% for command in user_results.commands %}
         {{ command }}
     {% endfor %}
-    {% for command in tacacs_results.commands %}
+    {% for command in tacacs_results.updates %}
         {{ command }}
     {% endfor %}
