--- a/templates/report_template.j2
+++ b/templates/report_template.j2
@@ -15,3 +15,6 @@
     {% for command in tacacs_results.results[0].updates %}
         {{ command }}
     {% endfor %}
+    {% for command in tacacs_results.results[1].updates %}
+        {{ command }}
+    {% endfor %}
