revamped config templates to be more generic

--- a/templates/compliance_template.j2
+++ b/templates/compliance_template.j2
@@ -1,3 +1,5 @@
+{% include 'generic_compliance_template.j2' %}
+
 {% if ansible_net_model == 'WS-C3560CX-12PC-S' or ansible_net_model == 'WS-C3560CG-8PC-S' or ansible_net_model == 'IOSv' %}
 {% include '3560cx_compliance_template.j2' %}
 
@@ -6,8 +8,3 @@
 
 {% elif ansible_net_model == 'C9500-40X' or ansible_net_model == 'C9500-16X' %}
 {% include '9500_compliance_template.j2' %}
-
-{% else %}
-{% include 'generic_compliance_template.j2' %}}
-
-{% endif %}
