--- a/templates/compliance_template.j2
+++ b/templates/compliance_template.j2
@@ -8,3 +8,5 @@
 
 {% elif ansible_net_model == 'C9500-40X' or ansible_net_model == 'C9500-16X' %}
 {% include '9500_compliance_template.j2' %}
+
+{%endif%}
